--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -25,7 +25,7 @@
                         <div>
                             <h1>Plastic</h1>
                             <p [ngStyle]="{'color': getColorForThreshold('plastic') }">
-                                <ngx-animated-counter [params]="paramsForPlastic"></ngx-animated-counter>
+                                {{ currentUser.PlasticCount }}
                                 <span>/ {{ currentUser.PlasticThreshold }}</span>
                             </p>
                         </div>
@@ -35,7 +35,7 @@
                         <div>
                             <h1>Aluminiu</h1>
                             <p [ngStyle]="{'color': getColorForThreshold('can') }">
-                                <ngx-animated-counter [params]="paramsForAluminium"></ngx-animated-counter>
+                                {{ currentUser.AluminiumCount }}
                                 <span>/ {{ currentUser.AluminiumThreshold }}</span>
                             </p>
                         </div>
@@ -45,7 +45,7 @@
                         <div>
                             <h1>Sticla</h1>
                             <p [ngStyle]="{'color': getColorForThreshold('glass') }">
-                                <ngx-animated-counter [params]="paramsForGlass"></ngx-animated-counter>
+                                {{ currentUser.GlassCount }}
                                 <span>/ {{ currentUser.GlassThreshold }}</span>
                             </p>
                         </div>
