--- a/src/app/pages/bags-seal/bags-seal.page.scss
+++ b/src/app/pages/bags-seal/bags-seal.page.scss
@@ -9,3 +9,64 @@
         }
     }
 }
+
+ion-content {
+    .seal__content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 20px;
+
+        .seal__category {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            h1 {
+                margin: 0;
+                font-size: 22px;
+                font-weight: 500;
+            }
+
+            ion-radio-group {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                ion-radio {
+                    font-size: 18px;
+                    font-weight: 400;
+                    letter-spacing: -0.5px;
+                }
+            }
+        }
+
+        ion-button {
+            min-height: 70px;
+            font-size: 28px;
+            letter-spacing: -0.4px;
+            text-transform: none;
+            --border-radius: 0;
+            font-weight: 500;
+            margin: 0;
+            width: 100%;
+        }
+
+        ion-item {
+            --background: transparent;
+            --padding-start: 0px;
+            --inner-padding-end: 8px;
+
+            ion-icon {
+                font-size: 20px;
+                margin: 0;
+                margin-top: 16px;
+                color: rgb(0 0 0 / 20%);
+            }
+        }
+
+
+    }
+}
