--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,7 +8,7 @@ ion-content {
         ion-spinner {
             width: 42px;
             height: 42px;
-            opacity: .5;
+            opacity: 0.5;
         }
     }
     .home__content {
@@ -34,6 +34,7 @@ ion-content {
                     min-height: 48px;
                     font-size: 20px;
                     letter-spacing: -0.7px;
+                    --border-radius: 8px;
                     text-transform: unset;
                     font-weight: 400;
                     margin: 0;
@@ -42,7 +43,7 @@ ion-content {
                         position: absolute;
                         right: 5px;
                         font-size: 20px;
-                        opacity: .7;
+                        opacity: 0.7;
                     }
                 }
             }
@@ -60,7 +61,7 @@ ion-content {
 
                     ion-icon {
                         font-size: 24px;
-                        opacity: .5;
+                        opacity: 0.5;
                     }
 
                     h1 {
@@ -69,18 +70,28 @@ ion-content {
                         font-weight: 500;
                         letter-spacing: -0.3px;
                     }
+
+                    .seal-orange {
+                        background: var(--ion-color-warning);
+                        padding: 0 10px;
+                        border-radius: 8px;
+                        color: black !important;
+                    }
+
+                    .seal-red {
+                        background: var(--ion-color-danger);
+                        padding: 0 10px;
+                        border-radius: 8px;
+                        color: whitesmoke !important;
+                    }
+
                     p {
                         margin: 0;
                         font-size: 16px;
                         font-weight: 300;
-
-                        span {
-                            color: black;
-                        }
+                        color: black;
                     }
                 }
-
-
             }
 
             .home__info {
@@ -90,11 +101,14 @@ ion-content {
                 background: #f7f7f7;
                 padding: 20px;
                 border-radius: 16px;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                box-shadow:
+                    rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+                    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
-                h1, p {
+                h1,
+                p {
                     margin: 0;
-                    letter-spacing: -.7px;
+                    letter-spacing: -0.7px;
                 }
 
                 h1 {
@@ -115,8 +129,6 @@ ion-content {
                     }
                 }
             }
-
-
         }
 
         .primary {
@@ -127,8 +139,6 @@ ion-content {
             --border-radius: 10px;
             font-weight: 500;
         }
-
-
     }
 }
 
