--- a/src/app/pages/voucher-history/voucher-history.page.html
+++ b/src/app/pages/voucher-history/voucher-history.page.html
@@ -38,7 +38,7 @@
                             </div>
                         </ion-item>
                         <ion-item-options slot="end">
-                            <ion-item-option color="tertiary" expandable="true" (click)="reprint(voucher)">
+                            <ion-item-option color="tertiary" [expandable]="voucher.State === 1 || voucher.State === 2" (click)="reprint(voucher)" [disabled]="voucher.State !== 1 && voucher.State !== 2">
                                 <ng-container *ngIf="isReprinting; else show_print">
                                     <ion-spinner name="lines"></ion-spinner>
                                 </ng-container>
