feat(app): new login & reset password page

--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,37 +1,38 @@
 <ion-content [fullscreen]="true">
-    <div class="login__content">
+    <div class="reset__content">
+        <div class="reset__back">
+            <ion-button fill="clear" color="dark" routerLink="/login">
+                <ion-icon slot="icon-only" name="chevron-back-circle" color="dark"></ion-icon>
+            </ion-button>
+        </div>
+
         <!-- Logo Upper -->
         <img src="../../../assets/icon/login_logo.svg"/>
 
         <!-- Title -->
-        <div class="login__title">
+        <div class="reset__title">
             <h1>Soluție de colectare manuală SGR</h1>
-            <p>Pastrează-ți datele în siguranță</p>
+            <p>Resetează-ți parola contului</p>
         </div>
 
         <!-- Form -->
-        <form [formGroup]="loginForm">
+        <form [formGroup]="resetForm">
             <ion-item mode="ios">
                 <ion-input inputmode="text" label="Nume de utilizator" formControlName="username" label-placement="stacked" type="text" required spellcheck="false" placeholder="Introdu numele de utilizator" fill="solid"></ion-input>
                 <ion-icon name="person" slot="end"></ion-icon>
             </ion-item>
-            <ion-item mode="ios">
-                <ion-input label="Parolă" label-placement="stacked" type="password" formControlName="password" required spellcheck="false" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;" fill="solid"></ion-input>
-                <ion-icon name="key" slot="end"></ion-icon>
-            </ion-item>
         </form>
 
         <!-- Bottom Actions -->
-        <div class="login__bottom">
-            <ion-button expand="full" shape="round" (click)="login()" [disabled]="!loginForm.valid || isLogging">
-                <ng-container *ngIf="isLogging; else show_button">
+        <div class="reset__bottom">
+            <ion-button expand="full" shape="round" (click)="resetPassword()" [disabled]="!resetForm.valid || isResetting">
+                <ng-container *ngIf="isResetting; else show_button">
                     <ion-spinner name="lines"></ion-spinner>
                 </ng-container>
                 <ng-template #show_button>
-                    Autentificare
+                    Trimite parolă
                 </ng-template>
             </ion-button>
-            <p routerLink="/reset-password">Ți-ai uitat parola?</p>
         </div>
 
     </div>
