--- a/src/app/pages/reset-password/reset-password.page.scss
+++ b/src/app/pages/reset-password/reset-password.page.scss
@@ -1,5 +1,5 @@
 ion-content {
-    .login__content {
+    .reset__content {
         width: 100%;
         height: 100%;
         display: flex;
@@ -8,13 +8,29 @@ ion-content {
         gap: 25px;
         padding: 30px;
         text-align: center;
+        position: relative;
+
+        .reset__back {
+            position: absolute;
+            left: 15px;
+
+            ion-button {
+                margin: 0;
+
+                ion-icon {
+                    font-size: 32px;
+                }
+            }
+
+
+        }
 
         img {
             width: 134px;
             height: 108px;
         }
 
-        .login__title {
+        .reset__title {
             display: flex;
             flex-direction: column;
 
@@ -68,7 +84,7 @@ ion-content {
             }
         }
 
-        .login__bottom {
+        .reset__bottom {
             display: flex;
             flex-direction: column;
             gap: 15px;
@@ -83,16 +99,6 @@ ion-content {
                 font-size: 18px;
                 font-style: normal;
                 font-weight: 500;
-                line-height: normal;
-                letter-spacing: -0.5px;
-            }
-
-            p {
-                margin: 0;
-                color: #9926f7;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
                 line-height: normal;
                 letter-spacing: -0.5px;
             }
