feat(i18n): reset password page translation

--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -11,14 +11,14 @@
 
         <!-- Title -->
         <div class="reset__title">
-            <h1>Soluție de colectare manuală SGR</h1>
-            <p>Resetează-ți parola contului</p>
+            <h1>{{ 'Forgot.Title' | translate }}</h1>
+            <p>{{ 'Forgot.Subtitle' | translate }}</p>
         </div>
 
         <!-- Form -->
         <form [formGroup]="resetForm">
             <ion-item mode="ios">
-                <ion-input inputmode="text" label="Nume de utilizator" formControlName="username" label-placement="stacked" type="text" required spellcheck="false" placeholder="Introdu numele de utilizator" fill="solid"></ion-input>
+                <ion-input inputmode="text" label="{{ 'Forgot.Username' | translate }}" formControlName="username" label-placement="stacked" type="text" required spellcheck="false" placeholder="{{ 'Forgot.UsernamePlaceholder' | translate }}" fill="solid"></ion-input>
                 <ion-icon name="person" slot="end"></ion-icon>
             </ion-item>
         </form>
@@ -30,7 +30,7 @@
                     <ion-spinner name="lines"></ion-spinner>
                 </ng-container>
                 <ng-template #show_button>
-                    Trimite parolă
+                    {{ 'Forgot.Sent' | translate }}
                 </ng-template>
             </ion-button>
         </div>
