--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -149,5 +149,10 @@ ion-toolbar {
     ion-title {
         font-size: 22px;
         font-weight: 300;
+
+        b {
+            font-weight: 500;
+            font-size: 20px;
+        }
     }
 }
